2015-07-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Use HTTP POST method for process_bulk instead of GET to avoid issues
	with HTTP header memory limits.

	* src/gsad.c (gsad_connection_info): Add fields content_type,
	content_disposition and content_length.
	(free_resources): Free content_disposition string.
	(exec_omp_post): Add case for process_bulk.
	(exec_omp_get): Remove case for process_bulk.
	(gsad_add_content_type_header): Move above send_response function.
	(send_response): Add parameters content_type, content_disposition and
	content_length to responses that are not HTML pages, rename parameter
	page to content.
	(redirect_handler, request_handler): Add new send_response parameters.

	* src/html/classic/omp.xsl (list-window): Use the POST method to send
	the bulk action form.

2015-07-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add Russian translation by Ilmar Habibulin and rebuild Chinese
	translation.

	* CMakeLists.txt: Install new src/html/classic/help_ru.xsl.

	* src/CMakeLists.txt: Add syntax check for Russian translation.

	* src/html/classic/help_ru.xsl: New help file. Originally created by
	Ilmar Habibulin.

	* src/po/CMakeLists.txt: Add Russian translation files.

	* src/po/gsad_xsl-ru.po: New file. Generated from old style XML file
	by Ilmar Habibulin and merged with .pot file.

	* src/po/gsad_xsl-zh.po: Newly generated from old XML and merged with
	.pot file.

2015-07-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* INSTALL: Mention that locale should be an English one.

	* src/gsad.c: Add #INCLUDE <langinfo.h>
	(main): Test LC_ALL instead of LC_MESSAGES. Warn if locale is not an
	"en_..." one or if the encoding is not UTF-8. Mention environment
	variables in warning messages.

2015-07-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-tasks-table, html-cpe-table)
	(html-cve-table, html-nvt-table, html-ovaldef-table)
	(html-cert_bund_adv-table, html-dfn_cert_adv-table, html-allinfo-table)